# vllm-router

./: .dockerignore  Dockerfile  README.md  aiohttp_client.py  app.py  auth.py  build-image.sh  check-environment.sh  debug-layers.sh  docker-compose.yaml  dynamic_config.py  graceful_shutdown.py  httpx_client.py  investigate-reproducibility.sh  log.py  protocols.py  pyproject.toml  quick-test.sh  quote.py  requirements.txt  service_discovery.py  test-reproducibility.sh  tests.http  utils.py
.github/workflows/: build.yml  claude-code-review.yml  claude.yml
middleware/: __init__.py  graceful_shutdown.py
parsers/: parser.py
prefix/: hashtrie.py
routers/: config_router.py  health_router.py  main_router.py  metrics_router.py  proxy_router.py  routing_logic.py
services/: backend_discovery.py
services/metrics_service/: __init__.py
services/request_service/: request.py
stats/: engine_stats.py
