[project]
name = "vllm-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp[speedups]==3.13.0",
    "cachetools>=6.2.2",
    "cryptography>=46.0.3",
    "dstack-sdk>=0.5.3",
    "eth-account>=0.13.7",
    "fastapi==0.115.8",
    "numpy==1.26.4",
    "prometheus-client==0.21.1",
    "psutil==7.0.0",
    "python-multipart==0.0.20",
    "pyyaml>=6.0.3",
    "sentry-sdk[fastapi]==2.27.0",
    "uhashring==2.3",
    "uvicorn==0.34.0",
    "web3>=7.14.0",
    "xxhash==3.5.0",
]
